# timepoint-snag-bench

./: .bandit  .gitignore  .semgrepignore  BACKGROUND.md  CHANGELOG.md  README.md  TIMEPOINT_SNAG-BENCH_SUITE_INTEGRATION_ANALYSIS.md  docs.json  methodology.md  pyproject.toml  run.sh
results/: LEADERBOARD.md  bench_gemini-2.0-flash_20260219_1730.jsonl  eval_20260218_1859.jsonl  eval_20260218_1937.jsonl  eval_20260218_1948.jsonl  eval_20260218_2043.jsonl  eval_20260219_1459.jsonl  eval_20260219_1558.jsonl  eval_20260219_1653.jsonl  leaderboard.json  report_20260218.md  triples_20260218_0545.jsonl  triples_20260218_0614.jsonl  triples_20260218_0636.jsonl  triples_20260218_1529.jsonl  triples_20260218_1614.jsonl  triples_20260218_1724.jsonl  triples_20260218_1732.jsonl  triples_20260218_1753.jsonl
snag_bench/: __init__.py  calibration.py  cli.py  evaluator.py  leaderboard.py  schema.py
snag_bench/axes/: __init__.py  coverage.py  human.py  predictive.py
tasks/: tier1_easy.json  tier2_medium.json  tier3_hard.json  version.json
