[project]
name = "timepoint-snag-bench"
version = "1.1.0"
description = "SNAG Bench — orchestrator that makes Flash + Daedalus + Proteus one closed temporal reasoning loop"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [
    {name = "Sean McDonald", email = "realityinspector@gmail.com"}
]
keywords = ["ai", "temporal-reasoning", "benchmark", "snag", "timepoint", "flash", "daedalus", "proteus"]

dependencies = [
    "click>=8.1",
    "pydantic>=2.0",
    "httpx>=0.25",
    "web3>=6.0",
    "rich>=13.0",
    "python-dotenv>=1.0",
    "timepoint-tdf @ git+https://github.com/timepoint-ai/timepoint-tdf.git",
]

[project.optional-dependencies]
full = [
    "timepoint-flash @ git+https://github.com/timepoint-ai/timepoint-flash.git",
    "timepoint-pro @ git+https://github.com/timepoint-ai/timepoint-pro.git",
    "timepoint-proteus @ git+https://github.com/timepoint-ai/proteus.git"
]

[project.scripts]
snag-bench = "snag_bench.cli:main"

[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=7"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["snag_bench*"]
namespaces = false
